# spacegame

./: .env  .gitignore  Cargo.toml  README.md  attributions.txt  dependencies.md  game_readme.md  index.js  pack.sh  package.json  webpack.config.js
art/: missile.aseprite  sat.aseprite
assets/config/: audio.json  engine.json  input.json  player_controller.json
assets/particle/: enemy_trail.json  explosion.json  menu.json  particle.json  trail.json
assets/prefab/: base_enemy.json  base_enemy_2.json  base_enemy_3.json  boss1.json  carrier.json  kamikaze.json  last_boss.json  mine.json  mine_lander.json  player.json  player_2.json  satellite.json  spammer.json  wanderer.json
assets/serialized/: base_enemy.json  base_enemy_2.json  base_enemy_3.json  boss1.json  carrier.json  kamikaze.json  last_boss.json  mine.json  mine_lander.json  player.json  satellite.json  spammer.json  wanderer.json
assets/shaders/: simple-fs.glsl  simple-vs.glsl
assets/sprites/: Pixel Spaceships - Shoot'em Ups pack HD.rar  README.txt  round_bullet_2.json  starfield_2048.xcf  starfield_625.json  starfield_625.xcf  starfield_729.xcf
assets/sprites/windshield_wiper/: 04.json
assets/stages/: stage1.json  stage2.json  stage3.json
src/: config.rs  event.rs  game.rs  lib.rs  main.rs  paths.rs  resources.rs  save.rs  ui.rs
src/assets/: audio.rs  mod.rs  prefab.rs  shader.rs  sprite.rs
src/assets/audio/: web.rs
src/assets/json/: mod.rs  web.rs
src/assets/sprite/: packed.rs  web.rs
src/core/: animation.rs  audio.rs  camera.rs  colors.rs  curve.rs  input.rs  mod.rs  random.rs  scene.rs  serialization.rs  timer.rs  transform.rs  window.rs
src/core/input/ser/: mod.rs
src/core/noise/: mod.rs  perlin.rs
src/gameplay/: bullet.rs  camera.rs  collision.rs  delete.rs  enemy.rs  explosion.rs  gameover.rs  health.rs  inventory.rs  level.rs  mod.rs  physics.rs  pickup.rs  player.rs  trail.rs
src/gameplay/level/: difficulty.rs  mod.rs  random_events.rs  wave.rs
src/gameplay/steering/: behavior.rs  mod.rs
src/prefab/: enemies.rs  mod.rs  player.rs
src/render/: background-fs.glsl  background-vs.glsl  background.rs  mod.rs  particle-fs.glsl  particle-texture-fs.glsl  particle-vs.glsl  particle.rs  sprite.rs  text-vs.glsl  text.rs  texture-fs.glsl  texture-vs.glsl
src/render/mesh/: mod.rs
src/render/path/: debug.rs  mod.rs  path-fs.glsl  path-vs.glsl
src/render/ui/: gui.rs  mod.rs  text-fs.glsl  text-vs.glsl  text.rs  ui-vs.glsl
src/render/ui/widgets/: button.rs  mod.rs  panel.rs
src/scene/: debug_scene.rs  loading.rs  main_menu.rs  mod.rs  particle_scene.rs  pause.rs  story.rs
src/scene/wave_selection/: mod.rs
