[package]
name = "spacegame"
version = "0.1.0"
authors = ["Benoit Eudier <benoit.eudier@aurorasolutionsltd.com>"]
edition = "2018"
default-run = "spacegame"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
luminance = "0.43"
luminance-windowing = "0.9"
luminance-derive = "0.6"
luminance-front = "0.3"

image = "0.23.11"

# ecs
hecs = "0.2.15"

bitflags = "1.2.1"
downcast-rs = "1.2.0"

# logging
log = "0.4.11"
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
shrev = "1.1.1"

serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
rand = "0.7.3"

# display text
glyph_brush = "0.6.3"

thiserror = "1.0.21"

# path tessellation
lyon = "0.16.2"

typetag = "0.1"
anyhow = "1.0.34"

# hash for assets' ID
md5 = "0.7.0"
base64 = "0.13.0"

# hot reload for assets
notify = "5.0.0-pre.4"

bincode = "1.3.1"

# Save directories
dirs = "3.0"

[dependencies.glam]
version = "0.9.5"
features = ["serde"]

# -------------------------------
# GRAPHICAL BACKEND AND AUDIO
# -------------------------------
[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
luminance-gl = "0.16.1"
rodio = "0.13.0"
glfw = "0.41"
luminance-glfw = "0.14"
#luminance-glutin = "0.11"
#luminance-windowing = "0.9"
#glfw = "0.41"


[target.'cfg(target_arch = "wasm32")'.dependencies]
luminance-webgl = "0.3.2"
luminance-web-sys = "0.2.2"

[features]
default = ["hot-reload"]
# If activated, the assets will be reloaded from the asset folders whenever changed.
hot-reload = []

# If activate, will try to find the packed asset at compile time and include them in the binary.
packed = []

# Build for web!
web = []