[package]
name = "spacegame"
version = "0.1.0"
authors = ["Benoit Eudier <benoit.eudier@aurorasolutionsltd.com>"]
edition = "2018"
default-run = "spacegame"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luminance = "0.43"
luminance-glfw = "0.14"
luminance-gl = "0.16"
luminance-windowing = "0.9"
luminance-derive = "0.6"
glfw = "0.41"
image = { version = "0.23.12", default-features = false, features = ["png"] }

# ecs
hecs = "0.3"

bitflags = "1.2.1"
downcast-rs = "1.2.0"

# logging
log = "0.4.11"
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
shrev = "1.1.1"

serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
rand = "0.7.3"

# display text
glyph_brush = "0.6.3"

thiserror = "1.0.21"

# path tessellation
lyon = "0.16.2"

typetag = "0.1"
anyhow = "1.0.34"

# Sound
rodio = { version = "0.13.0", default-features = false, features = ["wav", "mp3"] }

# hot reload for assets
notify = "5.0.0-pre.4"

bincode = "1.3.1"

# Save directories
dirs = "3.0"

[dependencies.glam]
version = "0.11"
features = ["serde"]


[features]
default = ["hot-reload"]
# If activated, the assets will be reloaded from the asset folders whenever changed.
hot-reload = []

# If activate, will try to find the packed asset at compile time and include them in the binary.
packed = []
